[gd_scene load_steps=4 format=2]

[ext_resource path="res://menu/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://menu/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/audio/button.wav" type="AudioStream" id=3]

[node name="pause_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 200, 100 )
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="menu"]
margin_right = 400.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 200 )
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 0.686275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_menu" type="VBoxContainer" parent="menu"]
margin_left = 160.0
margin_top = 60.0
margin_right = 240.0
margin_bottom = 139.0
rect_min_size = Vector2( 80, 64 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume" type="Button" parent="menu/pause_menu"]
margin_right = 80.0
margin_bottom = 19.0
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kill" type="Button" parent="menu/pause_menu"]
margin_top = 23.0
margin_right = 80.0
margin_bottom = 42.0
text = "Kill"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="menu/pause_menu"]
margin_top = 46.0
margin_right = 80.0
margin_bottom = 65.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio_level" type="HSlider" parent="menu/pause_menu"]
margin_top = 69.0
margin_right = 80.0
margin_bottom = 79.0
theme = ExtResource( 2 )
min_value = -25.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="menu/pause_menu/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="menu/pause_menu/kill" to="." method="_on_kill_pressed"]
[connection signal="pressed" from="menu/pause_menu/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="menu/pause_menu/exit" to="." method="_on_kill_pressed"]
[connection signal="value_changed" from="menu/pause_menu/audio_level" to="." method="_on_audio_level_value_changed"]
